fixing the logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 <body class="preload">
     <div class="top"></div>
     <div class="profile">
-        <img src="/logo.png" />
+        <img src="logo.png" />
         <h3>Portfolio</h3>
         <!--<p>{{ site.description }}</p>-->
         <div class="gallery-nav">
