--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,8 +68,8 @@
 $('.slideshow').each( function() {
   var $slideshow = $(this);
   $slideshow.imagesLoaded( function() {
-    // $slideshow.skidder({animationType: 'css', maxWidth: 0, maxHeight: 0, leftaligned: true, scaleSlides: true});
-    $slideshow.skidder({scaleSlides: false, maxWidth: 0, maxHeight: 0});
+    $slideshow.skidder({animationType: 'css', maxWidth: 0, maxHeight: 0, leftaligned: true, scaleSlides: true});
+    //$slideshow.skidder({scaleSlides: false, maxWidth: 0, maxHeight: 0});
   });
 });
   
