trying animate instead of css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,7 @@
 $('.slideshow').each( function() {
   var $slideshow = $(this);
   $slideshow.imagesLoaded( function() {
-    $slideshow.skidder({animationType: 'css', maxWidth: 0, maxHeight: 0, scaleSlides: true});
+    $slideshow.skidder({animationType: 'animate', maxWidth: 0, maxHeight: 0, scaleSlides: true});
     //$slideshow.skidder({scaleSlides: false, maxWidth: 0, maxHeight: 0});
   });
 });
