back to css and hide the clickwrapper if on mobile

--- a/style.scss
+++ b/style.scss
@@ -29,6 +29,10 @@ $source-sans: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
     bottom: 0;
     height: 100%;
 
+    .skidder-clickwrapper {
+        display: none;
+    }
+
     @media (min-width: 38em) {
         left: 20%; 
     }
