--- a/style.scss
+++ b/style.scss
@@ -143,7 +143,7 @@ p.clear {
         position: relative;
         top: 50%;
         transform: translateY(-50%) translate3d(0, 0, 0);
-        padding: 50px;
+        padding: 50px 25px;
     }
 
     &.active {
