--- a/style.scss
+++ b/style.scss
@@ -132,7 +132,7 @@ p.clear {
     
 
     img {
-        filter: blur(5px);
+        filter: blur(5px) brightness(0.8);
         transition: filter 400ms ease-in-out;
         transform: translate3d(0, 0, 0);
 
