--- a/style.scss
+++ b/style.scss
@@ -16,6 +16,7 @@ $bar-thickness: 8px;                    // The thickness of the button bars
 $button-pad: 18px;                      // The left/right padding between button area and bars.
 $button-bar-space: 12px;                // The spacing between button bars
 $button-transistion-duration: 0.2s;     // The transition duration
+$carousel-duration: 0.4s;     // The transition duration
 $hamburgerColor: transparent;
 $hamburgerBarColor: rgb(0, 0, 128);
 
@@ -125,6 +126,7 @@ p.clear {
     max-width: 90vw;
     transform: translate3d(0, 0, 0);
     box-shadow: none !important;
+    perspective: 200px;
 
     @media (min-width : 768px) {
         max-width: 75vw;; 
@@ -132,9 +134,9 @@ p.clear {
     
 
     img {
-        filter: blur(3px) brightness(0.8);
-        transition: filter 400ms ease-in-out;
-        transform: translate3d(0, 0, 0);
+        filter: blur(3px) brightness(0.9);
+        // transition: filter 400ms ease-in-out;
+        // transform: translate3d(0, 0, 0);
 
 
         max-width: 100%;
@@ -142,13 +144,16 @@ p.clear {
 
         position: relative;
         top: 50%;
-        transform: translateY(-50%) translate3d(0, 0, 0);
+        perspective: 200px;
+        transform: translateY(-50%) translate3d(0, 0, 0) translateZ(-20px);
+        transition: transform $carousel-duration ease-in-out, filter $carousel-duration ease-in-out;
         padding: 50px 25px;
     }
 
     &.active {
         img {
             filter: none;
+            transform: translateY(-50%) translate3d(0, 0, 0);
         }
     }
 }
