--- a/style.scss
+++ b/style.scss
@@ -7,8 +7,13 @@ $source-sans: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
  $darkBlue: rgb(0, 0, 128);
  $darkBlueTransparent: rgba(0, 0, 128, 0.8);
  $greyText: #999;
+ $hoverText: #666;
+ $submitColor: rgb(0, 0, 128);
+ $submitColorHover: #005;
+
  $darkGrey: #111;
  $lightGrey: #eee;
+ $outlineColor: #ddd;
 
  $button-width: 96px;                    // The width of the button area
 $button-height: 96px;                   // The height of the button area
@@ -20,6 +25,8 @@ $carousel-duration: 0.4s;     // The transition duration
 $hamburgerColor: transparent;
 $hamburgerBarColor: rgb(0, 0, 128);
 
+$sidebar-width: 220px;
+
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -27,8 +34,11 @@ $hamburgerBarColor: rgb(0, 0, 128);
     -webkit-overflow-scrolling: touch;
 }
 
-@media (orientation:landscape) { /* ====== */
- 
+a {
+    color: $greyText;
+    &:hover {
+        color: $hoverText;
+    }
 }
 
 p.clear {
@@ -113,7 +123,7 @@ p.clear {
     }
 
     @media (min-width: 768px) {
-        left: 20%; 
+        left: $sidebar-width; 
     }
 }
 .slideshow {
@@ -158,6 +168,51 @@ p.clear {
     }
 }
 
+#contact {
+    text-align: center;
+
+    input, textarea {
+        width: 100%;
+        height: 3em;
+        margin-bottom: 1em;
+        padding: 0.5em;
+        font-size: 14px;
+        border: 1px solid $outlineColor;
+
+        &:disabled {
+            background-color: $lightGrey;
+        }
+    }
+
+    textarea {
+        height: 126px;
+    }
+
+    form {
+        width: 700px;
+        margin: auto;
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+
+    #submit {
+        float: right;
+        color: $submitColor;
+
+        &:hover {
+            text-shadow: 0 0 3px #aaf;
+        }
+
+        &.disabled {
+            text-shadow: none;
+            color: $greyText;
+            pointer-events: none;
+        }
+    }
+    
+}
+
 .profile {
     border-right: 1px solid $lightGrey;
     padding: 2%;
@@ -190,14 +245,19 @@ p.clear {
         text-align: center;
         color: $darkGrey;
     }
-    .social {
+    .contact {
         margin-left: 25vw;
         height: auto;
         width: 100%;
+
+        #contact-button {
+            position: relative;
+            top: -10px;
+        }
     }
     @media (min-width: 768px) {
         position: fixed;
-        width: 20%;
+        width: $sidebar-width;
         height: 100%;
         padding: 0;
         h3 {
@@ -218,13 +278,16 @@ p.clear {
             margin-top: 25%;
             margin-left: 24%;
         }
-        .social {
+        .contact {
             position: absolute;
-            bottom: 0;
-            margin-left: 2vw;
+            bottom: 10px;
+            margin-left: 0;
+            text-align: center;
+
             a {
                 padding: 0;
                 margin-left: 0;
+                margin-bottom: 20px;
             }
         }
     }
@@ -243,7 +306,6 @@ p.clear {
         padding: 5px 10px;
 
         >a {
-            color: #999;
             display: table-cell;
             // border: 1px solid #bbb;
             padding-left: 16px;
@@ -342,14 +404,8 @@ body {
 }
 
 a {
-    color: #515151;
     text-decoration: none;
     transition: all 0.3s;
-    &:hover,
-    &:focus {
-        color: $darkBlue;
-        text-decoration: dotted;
-    }
 }
 
 h1 {
