--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -202,7 +202,7 @@ $('form#contact-form').validate({
   messages: { },
   submitHandler: function(form) {
     $.ajax({
-      url: "//formspree.io/cameronholiman%40gmail%2Ecom",
+      url: "//formspree.io/michellecgray1%40gmail%2Ecom",
       method: "POST",
       data: $(form).serialize(),
       dataType: "json",
