No swiping on mobile, but proper scaling of images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,16 +33,18 @@
 
             <div class="contact">
                 <a id="contact-button" data-cat="contact" class="filter" href="#">Contact</a> 
-                <br>&nbsp;
-                {% if site.facebook %}
-                <a type="button" href="http://facebook.com/{{ site.facebook }}">
-                    <i class="fa fa-facebook"></i>
-                </a>
-                {% endif %} {% if site.instagram %}
-                <a type="button" href="https://www.instagram.com/{{ site.instagram }}">
-                    <i class="fa fa-instagram"></i>
-                </a>
-                {% endif %}
+                
+                <div class="social">
+                    {% if site.facebook %}
+                    <a type="button" href="http://facebook.com/{{ site.facebook }}">
+                        <i class="fa fa-facebook"></i>
+                    </a>
+                    {% endif %} {% if site.instagram %}
+                    <a type="button" href="https://www.instagram.com/{{ site.instagram }}">
+                        <i class="fa fa-instagram"></i>
+                    </a>
+                    {% endif %}
+                </div>
             </div>
         </div>
     </div>
@@ -125,7 +127,7 @@ $('.slideshow').each( function() {
   var $slideshow = $(this);
   $slideshow.imagesLoaded( function() {
     // $slideshow.skidder({animationType: 'css', maxWidth: 0, maxHeight: 0, scaleSlides: true});
-    $slideshow.skidder({animationType: 'css', scaleSlides: false, maxWidth: 0, maxHeight: 0});
+    $slideshow.skidder({animationType: 'css', scaleSlides: false, maxWidth: "100%", maxHeight: "100%", swiping: false});
   });
 });
 
@@ -164,10 +166,10 @@ $('.slideshow').each( function() {
       var slideshowWidth = $('.slideshow-wrapper').width();
       var dif =  $('.slide.active').offset().left - $('.slideshow-wrapper').offset().left + imgWidth/2 - slideshowWidth/2;
 
-      console.log('left: ', left);
-      console.log('img: ', imgWidth);
-      console.log('slideshow Left: ', $('.slideshow-wrapper').offset().left);
-      console.log('dif: ', dif);
+    //   console.log('left: ', left);
+    //   console.log('img: ', imgWidth);
+    //   console.log('slideshow Left: ', $('.slideshow-wrapper').offset().left);
+    //   console.log('dif: ', dif);
 
       $('.skidder-wrapper').css('margin-left', parseInt(left.replace('px', '')) - dif + 'px');
   }
