loading and rendering the first slideshow before loading the other images

--- a/style.scss
+++ b/style.scss
@@ -137,6 +137,9 @@ p.clear {
 }
 .slideshow {
     height: inherit !important;
+    &.hidden {
+        visibility: hidden;
+    }
 }
 .slide {
     display: inline-block;
