--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,9 +25,9 @@
                     <li class="">
                         <a data-cat="wedding" class="filter" href="#">Wedding</a>
                     </li>
-                    <li class="">
+                    <!--<li class="">
                         <a data-cat="underwater" class="filter" href="#">Underwater</a>
-                    </li>
+                    </li>-->
                     <!--<li class="">
                         <a data-cat="bucketlist" class="filter" href="#">The Bucketlist Tales</a>
                     </li>-->
@@ -105,7 +105,7 @@
             <div class="slide"><img-preload src="images/wedding/Perez Wedding-17.jpg"></div>
         </div>
     </div>
-    <div id="underwater" class="slideshow-wrapper">
+    <!--<div id="underwater" class="slideshow-wrapper">
         <div class="slideshow hidden" style="">
             <div class="slide"><img-preload src="images/underwater/Beauty.jpg"></div>
             <div class="slide"><img-preload src="images/underwater/Freedom.jpg"></div>
@@ -116,7 +116,7 @@
             <div class="slide"><img-preload src="images/underwater/Shell4.jpg"></div>
             <div class="slide"><img-preload src="images/underwater/Shell6.jpg"></div>
         </div>
-    </div>
+    </div>-->
     
     <div id="contact" class="slideshow-wrapper">
         <form id="contact-form" method="POST">
