--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,24 +13,11 @@
             <h3>Portfolio</h3>
             <div class="gallery-nav">
                 <ul>
-                    <li class="current">
-                        <a data-cat="adventure" class="filter active" href="#">Adventure</a>
+                    {% for category in site.portfolio %}
+                    <li class="{% if site.initial-portfolio == category.id %}current{% endif %}">
+                        <a data-cat="{{category.id}}" class="filter{% if site.initial-portfolio == category.id %} active{% endif %}" href="#">{{category.name}}</a>
                     </li>
-                    <li class="">
-                        <a data-cat="landscape" class="filter" href="#">Landscape</a>
-                    </li>
-                    <li class="">
-                        <a data-cat="portrait" class="filter" href="#">Portrait</a>
-                    </li>
-                    <li class="">
-                        <a data-cat="wedding" class="filter" href="#">Wedding</a>
-                    </li>
-                    <!--<li class="">
-                        <a data-cat="underwater" class="filter" href="#">Underwater</a>
-                    </li>-->
-                    <!--<li class="">
-                        <a data-cat="bucketlist" class="filter" href="#">The Bucketlist Tales</a>
-                    </li>-->
+                    {% endfor %}
                 </ul>
             </div>
 
@@ -57,7 +44,22 @@
             <div class="img-container" style="/*background: url(BryceCrack.jpg) no-repeat center center; background-size: cover; text-align: center;*/"><img src="BryceCrack.jpg"></img></div>
         </div>
     </div>-->
-    <div id="adventure" class="slideshow-wrapper active">
+
+    {% for category in site.portfolio %}
+    <div id="{{category.id}}" class="slideshow-wrapper {% if site.initial-portfolio == category.id %} active {% endif %}">
+        <div class="slideshow hidden" style="">
+            {% assign tag = 'img-preload' %}
+            {% if site.initial-portfolio == category.id %}
+                {% assign tag = 'img' %}
+            {% endif %}
+            {% for image in category.images %}
+            <div class="slide"><{{tag}} src="{{image}}"></div>
+            {% endfor %}
+        </div>
+    </div>
+    {% endfor %}
+
+    <!--<div id="adventure" class="slideshow-wrapper active">
         <div class="slideshow hidden" style="">
             <div class="slide"><img src="images/adventure/DakotaForest.jpg"></div>
             <div class="slide"><img src="images/adventure/DakotaTrainDesaturated.jpg"></div>
@@ -76,7 +78,7 @@
             <div class="slide"><img-preload src="images/landscape/LookUpBryce.jpg"></div>
             <div class="slide"><img-preload src="images/landscape/MilkyWay.jpg"></div>
             <div class="slide"><img-preload src="images/landscape/TinyTree.jpg"></div>
-            <div class="slide"><img-preload src="images/landscape/Tree.jpg"></div>            
+            <div class="slide"><img-preload src="images/landscape/Tree.jpg"></div>
         </div>
     </div>
 
@@ -103,7 +105,7 @@
             <div class="slide"><img-preload src="images/wedding/Perez Wedding-154.jpg"></div>
             <div class="slide"><img-preload src="images/wedding/Perez Wedding-17.jpg"></div>
         </div>
-    </div>
+    </div>-->
     <!--<div id="underwater" class="slideshow-wrapper">
         <div class="slideshow hidden" style="">
             <div class="slide"><img-preload src="images/underwater/Beauty.jpg"></div>
