Updating the photos and adding a bunch of wedding ones in

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
         <button id="menu-button" class="c-hamburger c-hamburger--htx">
         <span>toggle menu</span>
         </button>
-        <p class="clear"></p>
+        <!-- <p class="clear"></p> -->
         <div id="nav" class="mobile-hidden">
             <h3>Portfolio</h3>
             <div class="gallery-nav">
